--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -978,13 +978,13 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_unity_eater_desc:0 "§LThis species has a specific need of psychic nourishment complimentary to its organic needs, manifesting in the consumption of redundant thoughts, feelings or what some may call ''psychic'' aura.§!"
 	TRAIT_TEC_UNITY_EATER_EFFECT:0 "£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §G-50%§!\n£pop£ Pop £unity£ Unity Upkeep: §R+0.25§!"
 
-	trait_tec_spore_growth:0 "Sporal Germination"
-	trait_tec_spore_growth_desc:0 "§LTO DO§!"
-	TRAIT_TEC_SPORE_GROWTH_EFFECT:0 "Each pop working as a slave or better produces §G0.02§! £mod_pop_growth_speed£ §YPop Growth§!.\n\nThis stacks with natural §HOrganic Pop Growth§!."
+	trait_tec_spore_growth:0 "Fungo-Sporangic Propagation"
+	trait_tec_spore_growth_desc:0 "§LBy dispersing millions of microscopic corpuscles, of which many are able to thrive due to condition, compatibility or coincidence, this species reproduce incredibly fast.§!"
+	trait_tec_spore_growth_effect:0 "TODO TRAIT each pop increases pop growth on the planet"
 
-	trait_tec_twin_growth:0 "Dual Gametoids"
-	trait_tec_twin_growth_desc:0 "§LTO DO§!"
-	TRAIT_TEC_TWIN_GROWTH_EFFECT:0 "Each time a pop of this species is generated, there is a §G15%§! chance of another pop being £mod_pop_growth_speed£ §GGenerated§!."
+	trait_tec_dual_gametoids:0 "Dual Gametoids"
+	trait_tec_dual_gametoids_desc:0 "§LTO DO§!"
+	trait_tec_dual_gametoids_EFFECT:0 "Each time a pop of this species is generated, there is a §G15%§! chance of another pop being £mod_pop_growth_speed£ §GGenerated§!."
 
 	trait_tec_panspermic:0 "Panspermic Dispersion"
 	trait_tec_panspermic_desc:0 "§LAn anomalous biological development made this species generate a propagation effect when reproducing, manifesting their kind in far away regions or even entire celestial-grade distances, dispersing their genes and generating new life. The mysteries of life, unquestionable as always.§!"
@@ -1063,9 +1063,6 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_robot_minimal_maintenance_effect:0 "TODO TRAIT reduces amenities usage and increases army health"
 
 	# Special
-	trait_tec_fungal_growth:0 "Fungo-Sporangic Propagation"
-	trait_tec_fungal_growth_desc:0 "§LBy dispersing millions of microscopic corpuscles, of which many are able to thrive due to condition, compatibility or coincidence, this species reproduce incredibly fast.§!"
-	trait_tec_fungal_growth_effect:0 "TODO TRAIT each pop increases pop growth on the planet"
  # /
 
  # --------------- Robotic
