--- a/localisation/english/zz_evolved_leaders_l_english.yml
+++ b/localisation/english/zz_evolved_leaders_l_english.yml
@@ -270,8 +270,6 @@
 
 # Aiauth
 	tec_aiauth_ruler: "Ruler AI Node"
-	tec_aiauth_planetary_governing_node_planet: "[planet.GetName]"
-	tec_aiauth_planetary_governing_node_planet_fallback: "Planetary"
-	tec_aiauth_planetary_governing_node: "[tec_aiauth_planetary_governing_node_planet] AI Node"
+	tec_aiauth_planetary_governing_node: "[tec_aiauth_planetary_governing_node_planet.GetName] AI Node"
 	tec_aiauth_planetary_governing_node_desc: ""
 # /
