feat: more tooltip improvements, now nanotech labs and astral syphons count as research buildings for effects

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -243,6 +243,7 @@
 	trigger_tec_warning:1 "£trigger_tec_warning£ "
 
 	trigger_tec_warning_red:0 "£trigger_tec_warning_red£ "
+	tec_loc_temporarily_disabled: "§R£trigger_tec_warning_red£ [[Temporarily Disabled]§!"
 
 	tec_loc_ai_ruler_node: "£tec_ai_ruler£ AI Ruler Node"
 	tec_loc_ai_councilor_node: "£tec_ai_councilor£ AI Councilor Node"
