Desiccator adjustments - Desiccation decision takes 2.5 years now (from 1) - Desiccation decision now requires four (or more) extractors active - Greatly increased construction time and costs of extractors (480 days to 600 days) - Extractors now provide more technician jobs

--- a/localisation/english/zz_evolved_decisions_l_english.yml
+++ b/localisation/english/zz_evolved_decisions_l_english.yml
@@ -402,7 +402,7 @@ decision_tec_lifeseeded_gaia_desc:0 "Using our own essence, we can make this pla
  decision_tec_desiccate_planet_desc:0 "Using our extractors, we will accelerate the process of extracting resources from this planet, at the cost of gradually damaging its atmosphere."
  decision_tec_desiccate_planet_effects:0 "Extracts a big part of the planet Hydrosphere, §YDesiccating§! the planet in the process, increasing §Y$tec_loc_amenities_gestalt$§! usage and severely reducing £pop£ §YHabitability§!, transforming all the £building£ §Y$building_tec_machine_anglers_extractor$§! into £building£ §Y$building_tec_machine_anglers_extractor_on$§!, which produce way more §Y$tec_loc_energy$§!, and moving the extracted moisture to our £building£ §Y$building_tec_machine_anglers_nexus_A$§!.\n\n§YAfter this decision is done four times, the planet will be rendered unsuitable for any kind of complex or synthetic life.§!"
  decision_tec_desiccate_planet_nexus:0 "£trigger_no£ §RRequires a £building£ $building_tec_machine_anglers_nexus_A$ constructed in other colony.§!"
- decision_tec_desiccate_planet_extractor:0 "£trigger_no£ §RRequires at least one £building£ $building_tec_machine_anglers_extractor$ or $building_tec_machine_anglers_extractor_on$ constructed.§!"
+ decision_tec_desiccate_planet_extractor:0 "£trigger_no£ §RRequires §Y4§! £building£ $building_tec_machine_anglers_extractor$ or $building_tec_machine_anglers_extractor_on$ constructed.§!"
 
 
 # ---------------------------------------------------------
