fix: versatility tooltips

--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -79,11 +79,8 @@
 # /
 
 # ------------------------------------------------- Versatility
-	tr_versatility_adopt_tooltip:0 "Machine Species Modification Points: §G+2§!."
 	tr_versatility_adopt_synths:0 "$tr_versatility_adopt$"
-	tr_versatility_adopt_synths_tooltip:0 "Robotic Species Modification Points: §G+2§!."
-
-	tr_versatility_finish_tooltip:0 "Pop Assembly speed: §G+10%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
+	tr_versatility_finish_tooltip:0 "$tec_loc_generic_assembly$: §G+10%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
 
 	tr_versatility_spatial_optimization_tooltip:0 "£building£ §YCapital Buildings§! provide the planet with §G+5%§! £housing£ Housing, up to §G+20%§!."
 # /
