--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -170,6 +170,7 @@
 	tec_loc_sr_tec_ai_power: "£sr_tec_ai_power£ $sr_tec_ai_power$"
 	tec_loc_sr_tec_machine_processing_empire: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$"
 
+	tec_loc_generic_assembly:0 "£mod_planet_pop_assembly_mult£ Pop Assembly"
 	tec_loc_robot_assembly:0 "£job_roboticist£ Mechanical Pop Assembly"
 	tec_loc_robot_assembly_add: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$"
 	tec_loc_robot_assembly_mult: "£mod_planet_pop_assembly_mult£ $MOD_PLANET_POP_ASSEMBLY_ADD$ Mult"
