feat: cult infrastructure

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -29,6 +29,7 @@
 # --------------------------- SCRIPTED LOC --------------------------------
 	tec_jump_empty:0 "\n\n"
 	tec_loc_desc_separator: "-----------"
+	tec_loc_effects_section: "§EEffects:§!"
 	tec_loc_warning:0 "£trigger_tec_warning£"
 
 	tec_loc_feature_not_ready:0 "§R£trigger_tec_warning_red£ Feature not ready§!"
@@ -622,3 +623,5 @@ tec_debug.1.random_trait: "Random Trait"
 tec_debug.1.remove_negatives: "Remove Negative Traits"
 tec_debug.1.rerun_leader_actions: "Rerun Leader Starting on Actions"
 tec_debug.1.reset_leader: "Reset Leader To Level 1"
+
+
