--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -1,19 +1,19 @@
 ﻿l_english:
- tec_has_empire_cult: "Has Empire Religious Tenet:"
- tec_has_empire_last_activated_cult: "Has last activated Empire Religious Tenet:"
- tec_has_empire_last_deactivated_cult: "Has last deactivated Empire Religious Tenet:"
- tec_has_cult_points_available: "Has Available Religious Tenet Points"
- tec_activate_cult_effect: "Activated Religious Tenet:"
- tec_deactivate_cult_effect: "Deactivated Religious Tenet:"
- tec_cui_cult_header: "Religious Tenets"
- tec_cui_cult_header_points: "Picks Available: §Y2§!"
- tec_clear_cults: "Cleared All Religious Tenets"
+ tec_has_empire_cult: "Has Empire Ideology Tenet:"
+ tec_has_empire_last_activated_cult: "Has last activated Empire Ideology Tenet:"
+ tec_has_empire_last_deactivated_cult: "Has last deactivated Empire Ideology Tenet:"
+ tec_has_cult_points_available: "Has Available Ideology Tenet Points"
+ tec_activate_cult_effect: "Activated Ideology Tenet:"
+ tec_deactivate_cult_effect: "Deactivated Ideology Tenet:"
+ tec_cui_cult_header: "Ideology Tenets"
+ tec_cui_cult_header_points: "Picks Available: §Y[tec_cult_points_available]§!"
+ tec_clear_cults: "Cleared All Ideology Tenets"
  tec_cui_cult_header_basic_group: "Basic Tenets"
  tec_cui_cult_header_spiritualist_group: "Spiritualist Tenets"
  tec_cui_cult_header_special_group: "Special Tenets"
- tec_cui_cult_header_it st_group: "Advanced Tenets"
+ tec_cui_cult_header_advanced_group: "Advanced Tenets"
 
- mod_tec_cult_points_add: "Religious Tenet Points"
+ mod_tec_cult_points_add: "Ideology Tenet Points"
 
  tec_cult_tec_cult_knowledge: "$policy_option_tec_spiritualist_cult_knowledge$"
  tec_cult_tec_cult_knowledge_desc: "$policy_option_tec_spiritualist_cult_knowledge_desc$"
