feat: more button design and tooltips

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -356,7 +356,7 @@
 	TEC_TAG_SPIRITUALIST_RESTRICTION_POLICY_AI_FULL_RIGHTS:0 "$TEC_TAG_RESTRICTION_POLICY$ Cannot use ['concept_tec_policy_option_ai_full_rights_alias_icon'] Policy Option"
 
 	TEC_TAG_SPIRITUALIST_BONUS_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_veneration_of_saints_alias_icon'] Edict"
-	TEC_TAG_SPIRITUALIST_BONUS_MECHANIC_TEMPLES:0 "$TEC_TAG_BONUS_MECHANIC$ Can build ['concept_tec_ethic_building_temple'] buildings on any planet and §EFaith Arcologies§! on ['concept_tec_ecumenopoleis']"
+	TEC_TAG_SPIRITUALIST_BONUS_MECHANIC_TEMPLES:0 "$TEC_TAG_BONUS_MECHANIC$ Can build ['building:building_temple'] buildings on any planet and ['district:district_tec_arcology_faith'] on ['concept_tec_ecumenopoleis'] and other §YAdvanced Planets§!"
 
 	# Mat
 	ethic_materialist:0 "Materialist"
