--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -6,14 +6,29 @@
  tec_activate_cult_effect: "Activated Ideology Tenet:"
  tec_deactivate_cult_effect: "Deactivated Ideology Tenet:"
  tec_cui_cult_header: "Ideology Tenets"
- tec_cui_cult_header_points: "Picks Available: §Y[tec_cult_points_available]§!"
+ tec_cui_cult_header_points: "Picks Available: §Y[from.tec_cult_points_available]§!"
  tec_clear_cults: "Cleared All Ideology Tenets"
+ tec_clear_invalid_cults: "Cleared Invalid Ideology Tenets"
  tec_cui_cult_header_basic_group: "Basic Tenets"
  tec_cui_cult_header_spiritualist_group: "Spiritualist Tenets"
  tec_cui_cult_header_special_group: "Special Tenets"
  tec_cui_cult_header_advanced_group: "Advanced Tenets"
 
+ tec_cui_cult_active: "§ETenet Active§!"
+ tec_cui_cult_effects_section: "§EEffects:§!"
+ tec_cui_cult_current_effects_section: "§EActive Effects:§!"
+ tec_cui_cult_on_activate_effects_section: "\n§EWhen Activated:§!"
+ tec_cui_cult_on_deactivate_effects_section: "§EWhen Deactivated:§!"
+ tec_cui_cult_tooltip_disabled_start: "§g"
+ tec_cui_cult_tooltip_normal_start: "§T"
+ tec_cui_cult_tooltip_color_end: "§!"
+ tec_cui_cult_tooltip_not_enough_points: "£trigger_no£ $tec_has_cult_points_available$"
+
  mod_tec_cult_points_add: "Ideology Tenet Points"
+
+ tec_cult_tec_tenet_state_religion: "State Religion"
+ tec_cult_tec_tenet_state_religion_desc: "Our spiritual doctrine is seamlessly intertwined with governance, ensuring all civic actions and policies are rooted in sacred beliefs. This fosters unity and divine harmony, giving every citizen a profound sense of identity and stability within the cosmic order."
+ tec_cult_tec_tenet_state_religion_effect: "You can build ['building:building_temple'] buildings on any planet and ['district:district_tec_arcology_faith'] on ['concept_tec_ecumenopoleis'] and other §YAdvanced Planets§!\nEmbracing any ['ethic:ethic_spiritualist'] Faction costs no §Y$tec_loc_influence$§!"
 
  tec_cult_tec_cult_knowledge: "$policy_option_tec_spiritualist_cult_knowledge$"
  tec_cult_tec_cult_knowledge_desc: "$policy_option_tec_spiritualist_cult_knowledge_desc$"
