feat: confirmation window

--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -3,6 +3,7 @@
  tec_has_empire_last_activated_cult: "Has last activated Empire Ideology Tenet:"
  tec_has_empire_last_deactivated_cult: "Has last deactivated Empire Ideology Tenet:"
  tec_has_cult_points_available: "Has Available Ideology Tenet Points"
+ tec_cui_has_pending_cult_decision: "Has Pending Cult Decision"
  tec_activate_cult_effect: "Activated Ideology Tenet:"
  tec_deactivate_cult_effect: "Deactivated Ideology Tenet:"
  tec_cui_cult_header: "Ideology Tenets"
@@ -13,6 +14,11 @@
  tec_cui_cult_header_spiritualist_group: "Spiritualist Tenets"
  tec_cui_cult_header_special_group: "Special Tenets"
  tec_cui_cult_header_advanced_group: "Advanced Tenets"
+ tec_cui_cult_title_activate_cult: "Activate Tenet?"
+ tec_cui_cult_title_activate_cult_desc: "Are you sure you want to activate the §Y[from.tec_cult_in_queue]§! Tenet?"
+ tec_cui_cult_title_deactivate_cult: "Deactivate Tenet?"
+ tec_cui_cult_title_deactivate_cult_desc: "Are you sure you want to deactivate the §Y[from.tec_cult_in_queue]§! Tenet?"
+ tec_cui_cult_invalid: "Invalid"
 
  tec_cui_cult_active: "§ETenet Active§!"
  tec_cui_cult_effects_section: "§EEffects:§!"
