feat: implemented more ui stuff and 4 tenets

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -400,7 +400,7 @@
 	TEC_TAG_COOPERATIVE_BONUS_LIVING_STANDARD_UTOPIAN:0 "$TEC_TAG_BONUS_LIVING_STANDARD$ Can use ['concept_tec_living_standard_utopian_alias_icon'] Living Standards"
 	TEC_TAG_COOPERATIVE_BONUS_POLICY_TRADE:0 "$TEC_TAG_BONUS_POLICY$ Can use ['concept_tec_policy_option_trade_policy_social_alias_icon'] Policy Option"
 	TEC_TAG_COOPERATIVE_BONUS_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_tec_social_benefits_alias_icon'] Edict"
-	TEC_TAG_COOPERATIVE_BONUS_MECHANIC_PUBLIC_WORKERS:0 "$TEC_TAG_BONUS_MECHANIC$ Unemployed pops become §YPublic Workers§!, which consume extra §Y$tec_loc_amenities$§! in exchange of producing extra §Y$tec_loc_unity$§! and not suffering §Y$tec_loc_happiness$§! maluses, and benefit from unemployment bonuses from living standards"
+	TEC_TAG_COOPERATIVE_BONUS_MECHANIC_PUBLIC_WORKERS:0 "$TEC_TAG_BONUS_MECHANIC$ Unemployed $tec_loc_pops$ become ['concept_tec_worker_job_tec_state_worker_plural_icon'], which consume extra §Y$tec_loc_amenities$§! in exchange of producing extra §Y$tec_loc_unity$§! and not suffering §Y$tec_loc_happiness$§! maluses, and benefit from Unemployment Modifiers"
 
 	# Comp
 	ethic_competitive:0 "Competitive"
@@ -412,7 +412,7 @@
 	ethic_competitive_desc:1 "§LPersonal ambition is the engine of progress. The desire to improve, the drive to pursue it: these are the things that have brought the stars themselves to our fingertips. We must continue to protect our hard-won freedoms of expression from the irrational fears of conformists, and to never allow genius to be held back by genericism.§!\n"
 
 	ethic_fanatic_competitive:0 "Fanatic Competitive"
-	ethic_fanatic_competitive_desc:1 "§LThere is no greater imperative than the call to excel, to accumulate, to reinvest. From the clash of ambitions arise great fortunes, and with them, ever greater ambitions. The wheel turns, flattening the unfit beneath it, but bringing new strivers up with every tread. We know, we exemplify, that whatever is best for the best of us is, ultimately, what is good for all of us."
+	ethic_fanatic_competitive_desc:1 "§LThere is no greater imperative than the call to excel, to accumulate, to reinvest. From the clash of ambitions arise great fortunes, and with them, ever greater ambitions. The wheel turns, flattening the unfit beneath it, but bringing new contenders up with every tread. We know, we exemplify, that whatever is best for the best of us is, ultimately, what is good for all of us."
 
 	TEC_ETHIC_INDIVIDUALIST_BUILDINGS:0 "§ECan build £building£ §HEntrepreneur buildings§!, less effective but cheaper worker alternatives to some specialist buildings§!"
 
@@ -617,8 +617,8 @@
 	TEC_TAG_GESTALT_EMPATHY_BONUS_FRIENDSHIP: "$TEC_TAG_BONUS_MECHANIC$\n- Access to the ['technology:tech_tec_gestalt_friendship'] Technology.\n- With this technology, you may randomly gain a non-['ethic:ethic_gestalt_consciousness'] §Y£pop£ Pop§! from empires with good relations or in the same Federation, if the empire can sustain the §Y$tec_loc_consumer_goods$§! for that population."
 	TEC_TAG_GESTALT_EMPATHY_BONUS_DIPLOMACY: "$TEC_TAG_BONUS_MECHANIC$\n- Allows other empires to make §Y$BRANCH_OFFICES$§! on your planets\n- This requires §GGood§! Relations\n"
 
-	GESTALT_ETHIC_EMPATHY:0 "§EReduces the £opinion£ Opinion penalty Gestalt consciousness normally have with other empires.§!"
-	TEC_TAG_GESTALT_EMPATHY_BONUS_OPINION: "$TEC_TAG_BONUS$ Gain §G+50§! §Y£opinion£ Opinion§! with non-['ethic:ethic_gestalt_consciousness'] Empires, countering the normal penalty."
+	GESTALT_ETHIC_EMPATHY:0 "§EReduces the $tec_loc_opinion$ penalty Gestalt consciousness normally have with other empires.§!"
+	TEC_TAG_GESTALT_EMPATHY_BONUS_OPINION: "$TEC_TAG_BONUS$ Gain §G+50§! §Y$tec_loc_opinion$§! with non-['ethic:ethic_gestalt_consciousness'] Empires, countering the normal penalty."
 
 #phobe
 	GESTALT_ETHIC_ALLOWS_LETMEALONE:0 "§EMost of the diplomatic actions are not available for this empire.§!"
