--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -104,11 +104,11 @@
 	tec_loc_crime: "£crime£ $PLANET_CRIME_TITLE$"
 	tec_loc_crime_gestalt: "£crime£ $MOD_PLANET_CRIME_NO_HAPPINESS_MULT$"
 	tec_loc_happiness: "£happiness£ $MOD_POP_HAPPINESS$"
+	tec_loc_opinion: "£opinion£ Opinion"
 
 	tec_loc_devastation:0 "£tec_devastation£ $PLANET_DEVASTATION$"
 
 	tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
-	tec_loc_trade_value_icon: "£trade_value£"
 	tec_loc_trade_value_icon: "£trade_value£"
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
 	tec_loc_trade: "$tec_loc_trade_value$"
