--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -15,9 +15,9 @@
  tec_cui_cult_header_special_group: "Special Tenets"
  tec_cui_cult_header_advanced_group: "Advanced Tenets"
  tec_cui_cult_title_activate_cult: "Activate Tenet?"
- tec_cui_cult_title_activate_cult_desc: "Are you sure you want to activate the §Y[from.tec_cult_in_queue]§! Tenet?"
+ tec_cui_cult_title_activate_cult_desc: "Are you sure you want to activate the §Y['tradition:[from.tec_cult_in_queue]']§! Tenet?"
  tec_cui_cult_title_deactivate_cult: "Deactivate Tenet?"
- tec_cui_cult_title_deactivate_cult_desc: "Are you sure you want to deactivate the §Y[from.tec_cult_in_queue]§! Tenet?"
+ tec_cui_cult_title_deactivate_cult_desc: "Are you sure you want to deactivate the §Y['tradition:[from.tec_cult_in_queue]']§! Tenet?"
  tec_cui_cult_invalid: "Invalid"
 
  tec_cui_cult_active: "§ETenet Active§!"
@@ -34,7 +34,19 @@
 
  tec_cult_tec_tenet_state_religion: "State Religion"
  tec_cult_tec_tenet_state_religion_desc: "Our spiritual doctrine is seamlessly intertwined with governance, ensuring all civic actions and policies are rooted in sacred beliefs. This fosters unity and divine harmony, giving every citizen a profound sense of identity and stability within the cosmic order."
- tec_cult_tec_tenet_state_religion_effect: "You can build ['building:building_temple'] buildings on any planet and ['district:district_tec_arcology_faith'] on ['concept_tec_ecumenopoleis'] and other §YAdvanced Planets§!\nEmbracing any ['ethic:ethic_spiritualist'] Faction costs no §Y$tec_loc_influence$§!"
+ tec_cult_tec_tenet_state_religion_effect: "[GetPriestIcon] [GetPriestPlural] Political Power: §Y+0.5§!\n\nYou can build £building£ ['building:building_temple'] buildings on your planets and ['district:district_tec_arcology_faith'] on ['concept_tec_ecumenopoleis'] and other §YAdvanced Planets§!\n\nEmbracing any ['ethic:ethic_spiritualist'] Faction costs no §Y$tec_loc_unity$§!"
+
+ tec_cult_tec_tenet_entrepreneur_economy: "Entrepreneur Economy"
+ tec_cult_tec_tenet_entrepreneur_economy_desc: "Our economy thrives on the spirit of entrepreneurship, encouraging innovation and individual initiative. Citizens are empowered to pursue their ambitions, driving progress and prosperity through creativity and enterprise. "
+ tec_cult_tec_tenet_entrepreneur_economy_effect: "$tec_private_hired$ $tec_loc_jobs$ and $job_trader_plural_with_icon$ Political Power: §Y+0.5§!\n\nYou can build £building£ ['concept_tec_ethic_building_entrepreneur'] on your planets\n\nEmbracing any ['ethic:ethic_competitive'] Faction costs no §Y$tec_loc_unity$§!"
+
+ tec_cult_tec_tenet_public_employment: "Public Employment"
+ tec_cult_tec_tenet_public_employment_desc: "Our society prioritizes public employment, ensuring that every citizen has a role in supporting communal well-being, providing a social security net."
+ tec_cult_tec_tenet_public_employment_effect: "£job_tec_state_worker£ $job_tec_state_worker_plural$ Political Power: §Y+0.5§!\n\nUnemployed $tec_loc_pops$ become ['concept_tec_worker_job_tec_state_worker_plural_icon'], which consume extra §Y$tec_loc_amenities$§! in exchange of producing extra §Y$tec_loc_unity$§! and not suffering §Y$tec_loc_happiness$§! maluses, and benefit from Unemployment Modifiers\n\nEmbracing any ['ethic:ethic_cooperative'] Faction costs no §Y$tec_loc_unity$§!"
+
+ tec_cult_tec_tenet_reform_and_opening: "Reform and Opening"
+ tec_cult_tec_tenet_reform_and_opening_desc: "Embracing external investment and innovation, blending them with our cooperative principles. We strive to revitalizes our economy, encourages technological advancement, and strengthens international ties while maintaining our core values and social structure."
+ tec_cult_tec_tenet_reform_and_opening_effect: "$MOD_PLANET_MAX_BUILDINGS_ADD$ (On Tier 2 Capitals and above): §R-1§!\n\nIncreased §Y$tec_loc_opinion$§! with ['concept_tec_authority_type_corporate'] Empires\n\n§Y£building£ Branch Office Capital§! buildings on your planets have reduce §Y$tec_loc_influence$§! Cost"
 
  tec_cult_tec_cult_knowledge: "$policy_option_tec_spiritualist_cult_knowledge$"
  tec_cult_tec_cult_knowledge_desc: "$policy_option_tec_spiritualist_cult_knowledge_desc$"
