subhabitat ice asteroid food fix

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1189,20 +1189,20 @@
 	tec_unregulated_augmentation_deck:0 "§CUnregulated Augmentation§!"
 	tec_reclaimed_augmentation_deck:0 "§CReclaimed Augmentation§!"
 
-	tec_only_1_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$Only one Cybernetic Mainframe can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
-	tec_only_2_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$This species has already augmented its body with a Cybernetic Mainframe.§!"
+	tec_only_2_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$Only §Y2§! Cybernetic Mainframes can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
+	tec_only_4_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$This species has already augmented its body with all possible Cybernetic Mainframe.§!"
 
-	tec_only_1_cybernetic_cortex_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! Cortex implant can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
-	tec_only_2_cybernetic_cortex_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically replaced most of its brain with Cortex implants.§!"
+	tec_only_2_cybernetic_cortex_trait:0 "\n§R$trigger_tec_warning_red$Only §Y2§! Cortex implants can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
+	tec_only_4_cybernetic_cortex_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically replaced most of its brain with Cortex implants.§!"
 
-	tec_only_1_cybernetic_internal_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! Internal implant can be added to this species. Developing new cybernetic advancements can allow further modifications."
-	tec_only_2_cybernetic_internal_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its body with Internal implants.§!"
+	tec_only_2_cybernetic_internal_trait:0 "\n§R$trigger_tec_warning_red$Only §Y2§! Internal implants can be added to this species. Developing new cybernetic advancements can allow further modifications."
+	tec_only_4_cybernetic_internal_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its body with Internal implants.§!"
 
-	tec_only_1_cybernetic_external_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! External implant can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
-	tec_only_2_cybernetic_external_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its body with External implants.§!"
+	tec_only_2_cybernetic_external_trait:0 "\n§R$trigger_tec_warning_red$Only §Y2§! External implants can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
+	tec_only_4_cybernetic_external_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its body with External implants.§!"
 
-	tec_only_1_cybernetic_deck_trait:0 "\n§R$trigger_tec_warning_red$Only §Y1§! Operating System Deck can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
-	tec_only_2_cybernetic_deck_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its personality with Operating System Decks.§!"
+	tec_only_2_cybernetic_deck_trait:0 "\n§R$trigger_tec_warning_red$Only §Y2§! Operating System Decks can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
+	tec_only_4_cybernetic_deck_trait:0 "\n§R$trigger_tec_warning_red$This species has already cybernetically augmented its personality with Operating System Decks.§!"
  # /
  # --------------- Mainframe Endoskeletal implants
 	# Tier 1
