feat: small minor changed and updates to tooltips

--- a/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
+++ b/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
@@ -1,57 +1,78 @@
 ﻿l_english:
- tec_has_tec_cult_example: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_example']"
+ tec_has_tec_cult_example_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_example']"
+ tec_has_tec_cult_example_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_example']"
  tec_activate_cult_tec_cult_example: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_cult_example']"
  tec_deactivate_cult_tec_cult_example: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_cult_example']"
- tec_has_last_activated_tec_cult_example: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_example']"
- tec_has_last_deactivated_tec_cult_example: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_example']"
+ tec_has_last_activated_tec_cult_example_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_cult_example']"
+ tec_has_last_activated_tec_cult_example_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_cult_example']"
+ tec_has_last_deactivated_tec_cult_example_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_cult_example']"
+ tec_has_last_deactivated_tec_cult_example_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_cult_example']"
  tec_cult_tec_cult_example_modifier: "$tec_cult_tec_cult_example$"
  tec_cult_tec_cult_example_header: "§H$tec_cult_tec_cult_example$§!"
  tec_cult_tec_cult_example_key: "tec_cult_tec_cult_example"
- tec_has_tec_tenet_state_religion: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
+ tec_has_tec_tenet_state_religion_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
+ tec_has_tec_tenet_state_religion_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
  tec_activate_cult_tec_tenet_state_religion: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_state_religion']"
  tec_deactivate_cult_tec_tenet_state_religion: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_tenet_state_religion']"
- tec_has_last_activated_tec_tenet_state_religion: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
- tec_has_last_deactivated_tec_tenet_state_religion: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
+ tec_has_last_activated_tec_tenet_state_religion_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
+ tec_has_last_activated_tec_tenet_state_religion_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
+ tec_has_last_deactivated_tec_tenet_state_religion_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
+ tec_has_last_deactivated_tec_tenet_state_religion_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
  tec_cult_tec_tenet_state_religion_modifier: "$tec_cult_tec_tenet_state_religion$"
  tec_cult_tec_tenet_state_religion_header: "§H$tec_cult_tec_tenet_state_religion$§!"
  tec_cult_tec_tenet_state_religion_key: "tec_cult_tec_tenet_state_religion"
- tec_has_tec_tenet_entrepreneur_economy: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
+ tec_has_tec_tenet_entrepreneur_economy_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
+ tec_has_tec_tenet_entrepreneur_economy_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
  tec_activate_cult_tec_tenet_entrepreneur_economy: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
  tec_deactivate_cult_tec_tenet_entrepreneur_economy: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
- tec_has_last_activated_tec_tenet_entrepreneur_economy: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
- tec_has_last_deactivated_tec_tenet_entrepreneur_economy: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
+ tec_has_last_activated_tec_tenet_entrepreneur_economy_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
+ tec_has_last_activated_tec_tenet_entrepreneur_economy_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
+ tec_has_last_deactivated_tec_tenet_entrepreneur_economy_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
+ tec_has_last_deactivated_tec_tenet_entrepreneur_economy_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
  tec_cult_tec_tenet_entrepreneur_economy_modifier: "$tec_cult_tec_tenet_entrepreneur_economy$"
  tec_cult_tec_tenet_entrepreneur_economy_header: "§H$tec_cult_tec_tenet_entrepreneur_economy$§!"
  tec_cult_tec_tenet_entrepreneur_economy_key: "tec_cult_tec_tenet_entrepreneur_economy"
- tec_has_tec_tenet_public_employment: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
+ tec_has_tec_tenet_public_employment_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
+ tec_has_tec_tenet_public_employment_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
  tec_activate_cult_tec_tenet_public_employment: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_public_employment']"
  tec_deactivate_cult_tec_tenet_public_employment: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_tenet_public_employment']"
- tec_has_last_activated_tec_tenet_public_employment: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
- tec_has_last_deactivated_tec_tenet_public_employment: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
+ tec_has_last_activated_tec_tenet_public_employment_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
+ tec_has_last_activated_tec_tenet_public_employment_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
+ tec_has_last_deactivated_tec_tenet_public_employment_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
+ tec_has_last_deactivated_tec_tenet_public_employment_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
  tec_cult_tec_tenet_public_employment_modifier: "$tec_cult_tec_tenet_public_employment$"
  tec_cult_tec_tenet_public_employment_header: "§H$tec_cult_tec_tenet_public_employment$§!"
  tec_cult_tec_tenet_public_employment_key: "tec_cult_tec_tenet_public_employment"
- tec_has_tec_tenet_reform_and_opening: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
+ tec_has_tec_tenet_reform_and_opening_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
+ tec_has_tec_tenet_reform_and_opening_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
  tec_activate_cult_tec_tenet_reform_and_opening: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
  tec_deactivate_cult_tec_tenet_reform_and_opening: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
- tec_has_last_activated_tec_tenet_reform_and_opening: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
- tec_has_last_deactivated_tec_tenet_reform_and_opening: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
+ tec_has_last_activated_tec_tenet_reform_and_opening_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
+ tec_has_last_activated_tec_tenet_reform_and_opening_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
+ tec_has_last_deactivated_tec_tenet_reform_and_opening_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
+ tec_has_last_deactivated_tec_tenet_reform_and_opening_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
  tec_cult_tec_tenet_reform_and_opening_modifier: "$tec_cult_tec_tenet_reform_and_opening$"
  tec_cult_tec_tenet_reform_and_opening_header: "§H$tec_cult_tec_tenet_reform_and_opening$§!"
  tec_cult_tec_tenet_reform_and_opening_key: "tec_cult_tec_tenet_reform_and_opening"
- tec_has_tec_cult_knowledge: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
+ tec_has_tec_cult_knowledge_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
+ tec_has_tec_cult_knowledge_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_activate_cult_tec_cult_knowledge: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_deactivate_cult_tec_cult_knowledge: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_cult_knowledge']"
- tec_has_last_activated_tec_cult_knowledge: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
- tec_has_last_deactivated_tec_cult_knowledge: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
+ tec_has_last_activated_tec_cult_knowledge_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
+ tec_has_last_activated_tec_cult_knowledge_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
+ tec_has_last_deactivated_tec_cult_knowledge_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
+ tec_has_last_deactivated_tec_cult_knowledge_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_cult_tec_cult_knowledge_modifier: "$tec_cult_tec_cult_knowledge$"
  tec_cult_tec_cult_knowledge_header: "§H$tec_cult_tec_cult_knowledge$§!"
  tec_cult_tec_cult_knowledge_key: "tec_cult_tec_cult_knowledge"
- tec_has_tec_cult_prosperity: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
+ tec_has_tec_cult_prosperity_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
+ tec_has_tec_cult_prosperity_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
  tec_activate_cult_tec_cult_prosperity: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_cult_prosperity']"
  tec_deactivate_cult_tec_cult_prosperity: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_cult_prosperity']"
- tec_has_last_activated_tec_cult_prosperity: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
- tec_has_last_deactivated_tec_cult_prosperity: "$tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
+ tec_has_last_activated_tec_cult_prosperity_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
+ tec_has_last_activated_tec_cult_prosperity_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
+ tec_has_last_deactivated_tec_cult_prosperity_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
+ tec_has_last_deactivated_tec_cult_prosperity_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
  tec_cult_tec_cult_prosperity_modifier: "$tec_cult_tec_cult_prosperity$"
  tec_cult_tec_cult_prosperity_header: "§H$tec_cult_tec_cult_prosperity$§!"
  tec_cult_tec_cult_prosperity_key: "tec_cult_tec_cult_prosperity"
