--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -2,8 +2,10 @@
  tec_has_empire_cult: "Has Empire Ideology Tenet:"
  tec_has_empire_last_activated_cult: "Has last activated Empire Ideology Tenet:"
  tec_has_empire_last_deactivated_cult: "Has last deactivated Empire Ideology Tenet:"
- tec_has_cult_points_available: "Has Available Ideology Tenet Points"
- tec_cui_has_pending_cult_decision: "Has Pending Cult Decision"
+ tec_has_cult_points_available_no: "£trigger_no£ Has Available Ideology Tenet Points"
+ tec_has_cult_points_available_yes: "£trigger_yes£ Has Available Ideology Tenet Points"
+ tec_cui_has_pending_cult_decision_no: "£trigger_no£ Has Pending Cult Decision"
+ tec_cui_has_pending_cult_decision_yes: "£trigger_yes£ Has Pending Cult Decision"
  tec_activate_cult_effect: "Activated Ideology Tenet:"
  tec_deactivate_cult_effect: "Deactivated Ideology Tenet:"
  tec_cui_cult_header: "Ideology Tenets"
